<resources>
    <string name="app_name">STITP_Module_User</string>

    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="hello_register_fragment">Hello register fragment</string>
    <string name="hello_data_fragment">Hello data fragment</string>

    <string name="tv_login_hint">login Page</string>
    <string name="et_login_username">username</string>
    <string name="et_login_password">password</string>
    <string name="bt_login">login now</string>
    <string name="tv_login_to_register">have not register?</string>

    <string name="tv_register_hint">register Page</string>
    <string name="et_register_username">register username</string>
    <string name="et_register_password">register password</string>
    <string name="bt_register">register now</string>

    <string name="tv_data_item_time">time</string>
    <string name="tv_data_item_cupboard">cupboard</string>
    <string name="tv_data_item_index">cable index</string>
    <string name="tv_data_item_content">cable content</string>
    <string name="tv_data_to_logout">logout?</string>

    <string name="tv_data_username">username</string>
    <string name="tv_data_count">online: 998 days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_shot">shot</string>
    <string name="ratio">目前的比例？</string>
    <string name="btn_detect"> detect </string>
</resources>